LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.663 $>


[Note: This file does not mention every change made to the NetBSD source tree.
For an exhaustive list, please subscribe to the `source-changes' mailing list,
or see the mailing list archives.  For more information, send a message
containing just the word `help' to `majordomo@NetBSD.org'.]


Changes from NetBSD 4.0 to NetBSD 5.0: